# personal-health-elt

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  justfile  pyproject.toml
.claude/: launch.json  orchestrator-prompt.md  settings.json
.claude/agents/: dbt-modeler.md  loader-engineer.md  mart-contract-reviewer.md  streamlit-page-wright.md  verifier.md
.claude/commands/: autonomous-milestone.md  begin.md  explore-plan.md  handoff.md  tdd.md  trim-context.md  wrap.md
.claude/hooks/: guard-git-add.sh  guard-mart-contract.sh
.claude/templates/: phase-brief.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: home.py
app/lib/: queries.py
app/pages/: 01_daily.py  02_weekly_review.py  03_training_load.py  04_body_comp.py  05_year_view.py  06_anomaly.py  07_readiness.py  08_aerobic_efficiency.py  09_correlations.py  10_ask.py  11_forecast.py  12_sleep.py  13_experiments.py  14_query.py
config/: notification_rules.yaml
deploy/launchd/: com.kyle.health-weekly-load.plist.template  com.kyle.prefect-server.plist.template
docs/: DEPLOYMENT.md  artifacts-plan.md  automation.md
docs/adr/: 0001-timezone-normalization-at-staging.md  0002-multi-source-dedup-priority.md  0003-two-level-idempotency.md  0004-self-hosted-prefect-over-gha-launchd.md  0005-mart-recovery-state-public-api.md  (+5 more)
ingest/: config.py  db.py  file_inventory.py
scripts/: daily_workout_coach.py  init_raw_schema.sql  push_recovery_state.py  weekly_health_review.py
tests/: conftest.py  test_ask.py  test_batch_loader.py  test_calendar_loader.py  test_categories_loader.py  test_causal.py  test_daily_workout_coach.py  test_db.py  test_demo_db_safety.py  test_file_inventory.py  test_fixture_safety.py  test_golden_marts.py  test_idempotency_helpers.py  test_idempotency_integration.py  test_notification_integration.py  test_notification_rules.py  test_notification_transport.py  test_push_recovery_state.py  test_quantities_loader.py  test_query.py  test_query_anchors_db.py  test_query_page.py  test_smoke.py  test_weather_loader.py  test_weekly_load.py  test_workouts_loader.py
transform/: .user.yml  dbt_project.yml  profiles.yml.example
(+89 files in other folders)
