[project]
name = "personal-health-elt"
version = "0.1.0"
description = "Personal Apple Health ELT pipeline: Health Auto Export CSVs to Postgres to dbt to Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "prefect>=3.0",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "streamlit>=1.38",
    "python-dotenv>=1.0",
    "pyarrow>=17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["transform/target", "transform/dbt_packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
